--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,7 @@
 
 <div *ngIf="isLoggedIn">
   <div class="col s12">
-    <input class="form-control" [(ngModel)]="searchText" type="text" placeholder="Search" aria-label="Search Tweets"
-      style="width: 400px; margin-left: 40px; display: inline-block;">
-    <button style="display: inline-block" (click)="searchTweet()" class="btn btn-primary">Search</button>
-
+    
     <div class="from_to col s12">
       <div class="row">
         <div class="col s5">
@@ -30,6 +27,9 @@
       </div>
     </div>
     <label>
+      <input class="form-control" [(ngModel)]="searchText" type="text" placeholder="Search" aria-label="Search Tweets"
+        style="width: 400px; margin-left: 40px; float: left;">
+      <button style="float: left;" (click)="searchTweet()" class="btn btn-primary">Search</button>
       <input (click)="getFavourites()" id="chkval" type="checkbox" />
       <span>Show only favourites Tweets</span>
     </label>
